--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,31 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap');
+
+:root {
+  --main-color: #373A5C;
+  --main-background: #373A5C;
+}
+
+body {
+  margin: 0;
+}
+a {
+	color: var(--main-color);
+	font-weight: 500;
+}
+a:hover {
+	color: var(--main-color);
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: Montserrat;
+}
+.h-100 {
+  height: 100%;
+}
+.pointer {
+	cursor: pointer;
 }
 
-.App-link {
-  color: #09d3ac;
+.fs-15 {
+	font-size: 1.5rem;
 }
